[package]
name = "tinate"
version = "0.1.0"
authors = ["CastilloDel <delcastillodelarosadaniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.7"
unicode-width = "0.1.5"
unicode-segmentation = "1.6.0"